# bcb-crud

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  postgres_astro.session.sql  pyproject.toml
.astro/: config.yaml  test_dag_integrity_default.py
dags/: exampledag.py  exchange_rates.py
tests/dags/: test_dag_example.py
